Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96746

Switching between external camera and built-in webcam flips the VideoOutput 180 degrees

    XMLWordPrintable

Details

    • Windows
    • 0f3c93716e (qt/tqtc-qtmultimedia/5.15)

    Description

      With some Camera (Logitech HD Webcam C615) if the camera.imageCapture.resolution is set to the maximum from camera.imageCapture.supportedResolutions, the VideoOutput will flip 180 degrees.
      When window is resized after the VideoOutput is flipped, it will return to normal.

      Attached example can be used to reproduce the issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dorisverria Doris Verria
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes